fix db connection

--- a/notebooks/example_notebook.ipynb
+++ b/notebooks/example_notebook.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Service is healthy\n",
+      "{'status': 'healthy'}\n"
+     ]
+    }
+   ],
    "source": [
     "from libs.shared.utils import HttpClient, JSON\n",
     "\n",
@@ -26,13 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User created successfully\n",
+      "{'id': 2, 'name': 'John Doe', 'email': 'joh1n@doe.com'}\n"
+     ]
+    }
+   ],
    "source": [
     "from libs.shared.data_transfer.dto import UserCreateDTO\n",
     "\n",
-    "user = UserCreateDTO(name=\"John Doe\", email=\"john@doe.com\")\n",
+    "user = UserCreateDTO(name=\"John Doe\", email=\"joh1n@doe.com\")\n",
     "\n",
     "# Serialize the user object to JSON\n",
     "user_json = JSON.stringify_DTO(user)\n",
@@ -46,6 +64,26 @@
     "    print(\"Failed to create user\")\n",
     "    print(f\"Status code: {response.status}\")\n",
     "    print(f\"Response content: {content}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'{\"id\": 2, \"name\": \"John Doe\", \"email\": \"joh1n@doe.com\"}\\n'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content"
    ]
   }
  ],
