debug create_api_key

--- a/notebooks/example_notebook.ipynb
+++ b/notebooks/example_notebook.ipynb
@@ -35,7 +35,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from libs.shared.data_transfer.dto import ApiKeyCreateDTO\n",
+    "\n",
+    "api_key_dto = ApiKeyCreateDTO(\n",
+    "    user_id=\"12345\",\n",
+    "    is_admin=True,\n",
+    ")\n",
+    "\n",
+    "api_key_dto_json = JSON.stringify(api_key_dto)\n",
+    "\n",
+    "\n",
+    "response, content = client.post(\"/generate_key\", api_key_dto_json)\n",
+    "\n",
+    "if response.status == 201:\n",
+    "    print(\"API key generated successfully\")\n",
+    "    print(JSON.parse(content))\n",
+    "else:\n",
+    "    print(\"Failed to generate API key\")\n",
+    "    print(f\"Status code: {response.status}\")\n",
+    "    print(f\"Response content: {content}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,14 +74,14 @@
      "output_type": "stream",
      "text": [
       "User created successfully\n",
-      "{'id': 2, 'name': 'John Doe', 'email': 'joh1n@doe.com'}\n"
+      "{'id': 3, 'name': 'John Doe', 'email': 'joh31n@doe.com'}\n"
      ]
     }
    ],
    "source": [
     "from libs.shared.data_transfer.dto import UserCreateDTO\n",
     "\n",
-    "user = UserCreateDTO(name=\"John Doe\", email=\"joh1n@doe.com\")\n",
+    "user = UserCreateDTO(name=\"John Doe\", email=\"joh31n@doe.com\")\n",
     "\n",
     "# Serialize the user object to JSON\n",
     "user_json = JSON.stringify_DTO(user)\n",
