generate api keys

--- a/notebooks/example_notebook.ipynb
+++ b/notebooks/example_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,18 +35,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API key generated successfully\n",
+      "{'api_key': \"b'gAAAAABnHJBF3tF_vhV-WkpVb4D-qSx54dbjOSdmTfAs5UJSOhxMaiaRvRG5uCKRVe96qEIyAZkksrOl_2ER8rDNbFVzL4-406FLJCqHZJT7RrO8HM1rjC5yW9pIH9AZLT2ZfxUY7fuR'\"}\n"
+     ]
+    }
+   ],
    "source": [
     "from libs.shared.data_transfer.dto import ApiKeyCreateDTO\n",
     "\n",
     "api_key_dto = ApiKeyCreateDTO(\n",
-    "    user_id=\"12345\",\n",
+    "    user_id=\"1\",\n",
     "    is_admin=True,\n",
     ")\n",
     "\n",
-    "api_key_dto_json = JSON.stringify(api_key_dto)\n",
+    "api_key_dto_json = JSON.stringify_DTO(api_key_dto)\n",
     "\n",
     "\n",
     "response, content = client.post(\"/generate_key\", api_key_dto_json)\n",
@@ -66,15 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User created successfully\n",
-      "{'id': 3, 'name': 'John Doe', 'email': 'joh31n@doe.com'}\n"
+      "Failed to create user\n",
+      "Status code: 500\n",
+      "Response content: b'{\"message\": \"Internal Server Error\"}\\n'\n"
      ]
     }
    ],
